--- a/src/Index.html
+++ b/src/Index.html
@@ -5,9 +5,6 @@
 		<title>CBZ Reader</title>
 		<!-- Include external JSZip library -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-		<link rel="stylesheet" href="Styles.html">
-		<script src="Scripts.html" defer></script>
-
 		
 		<?!= include('Styles'); ?> <!-- Google Apps Script API only -->
 	</head>
@@ -29,4 +26,21 @@
 		</div>
 		<?!= include('Scripts'); ?> <!-- Google Apps Script API only -->
 	</body>
+	<script>
+		fetch('Styles.html')
+			.then(response => response.text())
+			.then(data => {
+				const style = document.createElement('style');
+				style.innerHTML = data;
+				document.head.appendChild(style);
+			});
+
+		fetch('Scripts.html')
+			.then(response => response.text())
+			.then(data => {
+				const script = document.createElement('script');
+				script.innerHTML = data;
+				document.body.appendChild(script);
+			});
+	</script>
 </html>
