--- a/index.html
+++ b/index.html
@@ -12,18 +12,11 @@
 	<body>
 		<b id="pageCounter"></b>
 		<div id="imageContainer"></div>
-		<div id="sidebar">
-			<div id="sidebar-container">
-				<button id="sidebarToggle">Open</button>
-				<b>Cbz Reader</b>
-				<input type="file" id="fileInput" accept=".cbz">
-				<div id="zoomContainer">
-					<text>Zoom:</text>
-					<button id="zoomIn">+</button>
-					<button id="zoomOut">-</button>
-					<text id="zoomPerc">120%</text>
-				</div>
-			</div>
+		<div id="bar">
+			<input type="file" id="fileInput" accept=".cbz">
+			<text>Zoom:</text>
+			<input type="range" id="zoomSlider" min="60" max="160" value="100">
+			<input type="number" id="zoomInput" min="60" max="160" value="100" step="1">
 		</div>
 	</body>
 </html>
