New page # UI / Moved GAS to new branch

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<b id="pageCounter"></b>
 		<div id="imageContainer"></div>
 		<div id="bar">
 			<input type="file" id="fileInput" accept=".cbz">
 			<text>Zoom:</text>
 			<input type="range" id="zoomSlider" min="60" max="160" value="100">
 			<input type="number" id="zoomInput" min="60" max="160" value="100" step="1">
+			<text id="pageCounter">Page 0 / 0</text>
 		</div>
 	</body>
 </html>
