Loading message & Fixes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
+		<div id="messageContainer">
+			<p class="message" id="loadingMessage">Loading... (0 / 0)</p>
+		</div>
 		<div id="imageContainer"></div>
 		<div id="bar">
 			<input type="file" id="fileInput" accept=".cbz">
