--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
 			left: 50%;
 			transform: translate(-50%, -50%);
 			text-align: center;
+			pointer-events: none;
 		}
 
 		.message {
 			font-size: 32px;
 			text-shadow: 0 0 4px #000;
+			pointer-events: none;
 		}
 
 		#loadingMessage {
