Accept .cbr too

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</div>
 		<div id="imageContainer"></div>
 		<div id="bar">
-			<input type="file" id="fileInput" accept=".cbz">
+			<input type="file" id="fileInput" accept=".cbz,.cbr">
 			<text>Zoom:</text>
 			<input type="range" id="zoomSlider" min="60" max="160" value="100">
 			<input type="number" id="zoomInput" min="60" max="160" value="100" step="1">
