--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			padding: 0;
 			height: 100vh;
 			color: white;
-			background-color: #00020a;
+			background-color: rgb(0,0,0);
 			font-family: Verdana, sans-serif;
 			display: flex;
 			flex-direction: column;
@@ -23,20 +23,20 @@
 			align-items: center;
 			gap: 10px;
 			position: sticky;
-			background: #0a2133;
+			background: rgb(11,11,11);
 			height: 35px;
 			padding: 5px 10px;
 		}
 
 		#bar input {
-			background: #085e50;
+			background: rgb(22,22,22);
 			padding: 5px;
 			border: none;
 			width: 500px;
 		}
 
 		#bar input[type="range"] {
-			accent-color: #085e50;
+			accent-color: rgb(22,22,22);
 			width: 200px;
 		}
 
